rust/src/nasl/syntax/snapshots/scannerlib__nasl__syntax__keyword_extension__test__unclosed-3.snap
---
source: src/nasl/syntax/keyword_extension.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_err(stringify! (unclosed), \"local_var 1;\")"
snapshot_kind: text
---
error: Missing semicolon: 1
  ┌─ unclosed:1:1
  │
1 │ local_var 1;
  │ ^ Missing semicolon: 1
